--- a/package.json
+++ b/package.json
@@ -10,28 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^6.5.5",
-    "aws-amplify": "^6.6.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@aws-amplify/ui-react": "~6.13.2",
+    "aws-amplify": "~6.15.10",
+    "react": "~18.3.1",
+    "react-dom": "~18.3.1"
+  },
+  "engines": {
+    "node": ">= 20.20.0",
+    "npm": ">= 10.8.0"
   },
   "devDependencies": {
-    "@aws-amplify/backend": "^1.5.0",
-    "@aws-amplify/backend-cli": "^1.2.9",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "aws-cdk": "^2.138.0",
-    "aws-cdk-lib": "^2.138.0",
-    "constructs": "^10.3.0",
-    "esbuild": "^0.20.2",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "tsx": "^4.7.2",
-    "typescript": "^5.4.5",
-    "vite": "^5.4.10"
+    "@aws-amplify/backend": "~1.19.0",
+    "@aws-amplify/backend-cli": "~1.8.1",
+    "@eslint/compat":  "~2.0.1",
+    "@eslint/eslintrc": "~3.3.3",
+    "@eslint/js": "~9.39.2",
+    "@types/react": "~18.3.27",
+    "@types/react-dom": "~18.3.7",
+    "@typescript-eslint/eslint-plugin": "~8.53.0",
+    "@typescript-eslint/parser": "~8.53.0",
+    "@vitejs/plugin-react": "~5.1.2",
+    "esbuild": "~0.27.2",
+    "eslint": "~9.39.2",
+    "eslint-plugin-react-hooks": "~7.0.1",
+    "eslint-plugin-react-refresh": "~0.4.26",
+    "globals": "~17.0.0",
+    "typescript": "~5.9.3",
+    "vite": "~7.3.1"
   }
 }
